--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT = 8080
 CONNECTION_STRING = mongodb+srv://devport:FcbpBgbPRIcysdlJ@cluster0.28eudar.mongodb.net/?retryWrites=true&w=majority
-SALT =
-PRIVATE_KEY = 
+SALT = $2b$10$Yy7oFi.40fSqPsO7cumN5O
+PRIVATE_KEY = $2b$10$Yy7oFi.40fSqPsO7cumN5O
